fix: issues * url slug is calculated whenever the title changes * add lateral padding to workspaces * remove default title "New article", use placeholder instead * fix: z-index on top bar * Add button "ver articulo" * handle Ctrl+S to save

--- a/statics/www/admin2/index.css
+++ b/statics/www/admin2/index.css
@@ -12,7 +12,7 @@ html, body {
 #page-list-posts .workspace {
   max-width: 900px;
   margin: 0 auto;
-  padding: 80px 0;
+  padding: 80px 20px;
 }
 
 #page-list-posts .list-posts .entry {
@@ -47,7 +47,7 @@ html, body {
 #page-edit-post .workspace {
   max-width: 900px;
   margin: 0 auto;
-  padding: 80px 0;
+  padding: 80px 20px;
 }
 
 
